--- a/correlations_clean.ipynb
+++ b/correlations_clean.ipynb
@@ -722,9 +722,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def _get_local_permutation_pvals(x_mat, y_mat, truth, function, dist, n_perm, positive_only=True, **kwargs):\n",
-    "    xy_n = truth.shape[0]\n",
-    "    spot_n = truth.shape[1]\n",
+    "def _get_local_permutation_pvals(x_mat, y_mat, local_truth, function, dist, n_perm, positive_only=True, **kwargs):\n",
+    "    xy_n = local_truth.shape[0]\n",
+    "    spot_n = local_truth.shape[1]\n",
     "    \n",
     "    # permutation cubes to be populated\n",
     "    local_pvals = np.zeros((xy_n, spot_n))\n",
@@ -734,9 +734,9 @@
     "        _idx = rng.permutation(spot_n)\n",
     "        perm_r = function(x_mat = x_mat[:, _idx], y_mat=y_mat, dist=dist, **kwargs)\n",
     "        if positive_only:\n",
-    "            local_pvals += np.array(perm_r >= truth, dtype=int)\n",
+    "            local_pvals += np.array(perm_r >= local_truth, dtype=int)\n",
     "        else:\n",
-    "            local_pvals += (np.array(np.abs(perm_r) >= np.abs(truth), dtype=int))\n",
+    "            local_pvals += (np.array(np.abs(perm_r) >= np.abs(local_truth), dtype=int))\n",
     "\n",
     "    local_pvals = local_pvals / n_perm\n",
     "    \n",
@@ -764,8 +764,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 123,
    "id": "160df845",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from  scipy.sparse import csr_matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f0d4453b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fe424bbc",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -840,6 +858,34 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 116,
+   "id": "82286380",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.14309412,  0.05121768,  0.25515995, ..., -0.06165649,\n",
+       "        -0.43638704,  0.00177371],\n",
+       "       [-0.10581333,  0.29360736,  0.04407926, ...,  0.14110754,\n",
+       "         0.66784794,  0.14062116],\n",
+       "       [ 0.22754111,  0.4422745 ,  0.23457444, ..., -0.52143721,\n",
+       "         0.03018619,  0.27545886],\n",
+       "       [ 0.85488609,  0.78266451,  0.85818871, ...,  0.45052658,\n",
+       "         0.38507613,  0.84839006]])"
+      ]
+     },
+     "execution_count": 116,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "masked_sp"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 110,
    "id": "693c03cb",
    "metadata": {},
@@ -858,177 +904,6 @@
    "source": [
     "local_masked_pvals.shape"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 112,
-   "id": "c572b4e9",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 100/100 [00:29<00:00,  3.36it/s]\n"
-     ]
-    }
-   ],
-   "source": [
-    "local_masked_pvals_dist = _get_local_permutation_pvals(ligand_mat.A, receptor_mat.A, masked_sp, calculate_masked_correlations, dist, 100, positive_only=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 113,
-   "id": "ad844ae9",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "SpearmanrResult(correlation=0.9699599069412143, pvalue=2.076432780831021e-160)"
-      ]
-     },
-     "execution_count": 113,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "spearmanr(local_masked_pvals[0,:], local_masked_pvals_dist[0,:])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 72,
-   "id": "789bd566",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([0.499, 0.295, 0.504, 0.511, 0.714, 0.525, 0.486, 0.591, 0.569,\n",
-       "       0.255, 0.478, 0.528, 0.278, 0.14 , 0.126, 0.431, 0.279, 0.032,\n",
-       "       0.21 , 0.208, 0.321, 0.529, 0.194, 0.163, 0.101, 0.126, 0.158,\n",
-       "       0.312, 0.885, 0.337, 0.404, 0.181, 0.358, 0.588, 0.591, 0.348,\n",
-       "       0.38 , 0.312, 0.259, 0.784, 0.69 , 0.121, 0.84 , 0.075, 0.74 ,\n",
-       "       0.175, 0.023, 0.111, 0.006, 0.009, 0.87 , 0.504, 0.024, 0.145,\n",
-       "       0.214, 0.139, 0.256, 0.477, 0.139, 0.488, 0.673, 0.366, 0.433,\n",
-       "       0.489, 0.487, 0.255, 0.578, 0.341, 0.18 , 0.55 , 0.87 , 0.336,\n",
-       "       0.301, 0.267, 0.572, 0.24 , 0.202, 0.28 , 0.259, 0.242, 0.12 ,\n",
-       "       0.112, 0.657, 0.722, 0.729, 0.852, 0.116, 0.043, 0.047, 0.134,\n",
-       "       0.105, 0.74 , 0.25 , 0.327, 0.162, 0.108, 0.097, 0.615, 0.05 ,\n",
-       "       0.163, 0.124, 0.018, 0.309, 0.036, 0.031, 0.146, 0.729, 0.622,\n",
-       "       0.782, 0.708, 0.043, 0.595, 0.102, 0.664, 0.711, 0.579, 0.832,\n",
-       "       0.622, 0.592, 0.22 , 0.678, 0.602, 0.75 , 0.649, 0.588, 0.908,\n",
-       "       0.728, 0.791, 0.885, 0.896, 0.809, 0.879, 0.856, 0.592, 0.931,\n",
-       "       0.798, 0.868, 0.628, 0.25 , 0.264, 0.611, 0.441, 0.409, 0.659,\n",
-       "       0.567, 0.473, 0.06 , 0.085, 0.53 , 0.351, 0.203, 0.035, 0.031,\n",
-       "       0.092, 0.149, 0.585, 0.414, 0.183, 0.92 , 0.853, 0.735, 0.618,\n",
-       "       0.076, 0.198, 0.131, 0.111, 0.689, 0.867, 0.105, 0.824, 0.063,\n",
-       "       0.707, 0.347, 0.908, 0.758, 0.212, 0.999, 0.131, 0.358, 0.369,\n",
-       "       0.258, 0.344, 0.225, 0.269, 0.077, 0.363, 0.311, 0.108, 0.281,\n",
-       "       0.434, 0.2  , 0.066, 0.27 , 0.495, 0.362, 0.02 , 0.885, 0.787,\n",
-       "       0.789, 0.879, 0.644, 0.233, 0.676, 0.903, 0.838, 0.874, 0.81 ,\n",
-       "       0.806, 0.951, 0.247, 0.186, 0.072, 0.413, 0.611, 0.49 , 0.56 ,\n",
-       "       0.017, 0.073, 0.77 , 0.947, 0.894, 0.666, 0.645, 0.114, 0.757,\n",
-       "       0.914, 0.852, 0.711, 0.921, 0.096, 0.405, 0.237, 0.399, 0.838,\n",
-       "       0.805, 0.349, 0.626, 0.625, 0.13 , 0.415, 0.184, 0.375, 0.289,\n",
-       "       0.225, 0.108, 0.379, 0.442, 0.247, 0.213, 0.112, 0.16 , 0.251,\n",
-       "       0.66 , 0.146, 0.154, 0.17 , 0.229, 0.372, 0.952, 0.698])"
-      ]
-     },
-     "execution_count": 72,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "local_pvals[0,:]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 71,
-   "id": "33fea4bb",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([0.35, 0.43, 0.22, 0.51, 0.74, 0.54, 0.66, 0.63, 0.64, 0.55, 0.59,\n",
-       "       0.64, 0.46, 0.29, 0.18, 0.62, 0.44, 0.08, 0.62, 0.67, 0.5 , 0.69,\n",
-       "       0.53, 0.47, 0.51, 0.65, 0.37, 0.51, 0.93, 0.62, 0.53, 0.64, 0.66,\n",
-       "       0.78, 0.61, 0.42, 0.73, 0.35, 0.78, 0.82, 0.68, 0.55, 0.88, 0.36,\n",
-       "       0.87, 0.52, 0.15, 0.36, 0.04, 0.05, 0.78, 0.7 , 0.11, 0.36, 0.57,\n",
-       "       0.47, 0.27, 0.68, 0.43, 0.5 , 0.79, 0.39, 0.44, 0.52, 0.41, 0.37,\n",
-       "       0.36, 0.43, 0.38, 0.84, 0.85, 0.63, 0.48, 0.39, 0.58, 0.18, 0.48,\n",
-       "       0.22, 0.24, 0.39, 0.14, 0.52, 0.54, 0.81, 0.65, 0.66, 0.52, 0.28,\n",
-       "       0.22, 0.29, 0.31, 0.9 , 0.77, 0.56, 0.34, 0.07, 0.19, 0.73, 0.15,\n",
-       "       0.45, 0.08, 0.1 , 0.19, 0.06, 0.02, 0.09, 0.86, 0.71, 0.86, 0.9 ,\n",
-       "       0.28, 0.52, 0.46, 0.53, 0.46, 0.39, 0.46, 0.41, 0.48, 0.43, 0.57,\n",
-       "       0.52, 0.56, 0.64, 0.53, 0.78, 0.77, 0.84, 0.95, 0.99, 0.83, 0.92,\n",
-       "       0.92, 0.59, 0.97, 0.82, 0.89, 0.32, 0.16, 0.23, 0.38, 0.24, 0.37,\n",
-       "       0.66, 0.62, 0.34, 0.04, 0.03, 0.5 , 0.15, 0.17, 0.2 , 0.01, 0.08,\n",
-       "       0.44, 0.7 , 0.59, 0.48, 0.99, 0.94, 0.75, 0.81, 0.04, 0.31, 0.14,\n",
-       "       0.06, 0.47, 0.65, 0.05, 0.71, 0.06, 0.42, 0.86, 0.85, 0.75, 0.16,\n",
-       "       1.  , 0.71, 0.56, 0.25, 0.26, 0.68, 0.6 , 0.42, 0.16, 0.22, 0.35,\n",
-       "       0.19, 0.17, 0.25, 0.28, 0.29, 0.29, 0.49, 0.51, 0.09, 0.97, 0.8 ,\n",
-       "       0.96, 0.97, 0.62, 0.42, 0.79, 0.99, 0.88, 0.93, 0.7 , 0.87, 0.96,\n",
-       "       0.37, 0.2 , 0.47, 0.51, 0.41, 0.34, 0.64, 0.18, 0.3 , 0.48, 0.7 ,\n",
-       "       0.78, 0.58, 0.48, 0.35, 0.7 , 0.73, 0.72, 0.5 , 0.83, 0.17, 0.39,\n",
-       "       0.28, 0.26, 0.62, 0.56, 0.26, 0.53, 0.44, 0.04, 0.31, 0.05, 0.73,\n",
-       "       0.5 , 0.3 , 0.03, 0.2 , 0.52, 0.24, 0.14, 0.04, 0.23, 0.46, 0.83,\n",
-       "       0.13, 0.11, 0.25, 0.33, 0.57, 0.91, 0.52])"
-      ]
-     },
-     "execution_count": 71,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "local_masked_pvals[0,:]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 76,
-   "id": "2de2c13c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from scipy.stats import pearsonr, spearmanr"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 79,
-   "id": "b1175c6c",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(0.7922517880203663, 2.7966988408480506e-57)"
-      ]
-     },
-     "execution_count": 79,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "pearsonr(local_pvals[0,:], local_masked_pvals[0,:])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "117849ed",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
