--- a/correlations_clean.ipynb
+++ b/correlations_clean.ipynb
@@ -722,7 +722,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def _get_local_permutation_pvals(x_mat, y_mat, local_truth, function, dist, n_perm, positive_only=True, **kwargs):\n",
+    "def _get_local_permutation_pvals(x_mat, y_mat, local_truth, local_fun, dist, n_perm, positive_only=True, **kwargs):\n",
     "    xy_n = local_truth.shape[0]\n",
     "    spot_n = local_truth.shape[1]\n",
     "    \n",
@@ -732,11 +732,11 @@
     "    # shuffle the matrix\n",
     "    for i in tqdm(range(n_perm)):\n",
     "        _idx = rng.permutation(spot_n)\n",
-    "        perm_r = function(x_mat = x_mat[:, _idx], y_mat=y_mat, dist=dist, **kwargs)\n",
+    "        perm_score = local_fun(x_mat = x_mat[:, _idx], y_mat=y_mat, dist=dist, **kwargs) ## TODO switch to shuffle rows, not columns\n",
     "        if positive_only:\n",
-    "            local_pvals += np.array(perm_r >= local_truth, dtype=int)\n",
+    "            local_pvals += np.array(perm_score >= local_truth, dtype=int)\n",
     "        else:\n",
-    "            local_pvals += (np.array(np.abs(perm_r) >= np.abs(local_truth), dtype=int))\n",
+    "            local_pvals += (np.array(np.abs(perm_score) >= np.abs(local_truth), dtype=int))\n",
     "\n",
     "    local_pvals = local_pvals / n_perm\n",
     "    \n",
