--- a/spatialDM_reimplement.ipynb
+++ b/spatialDM_reimplement.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "d6fea9cf-3f0c-4404-89a6-08dd44aad58b",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "5f089877-3865-4b63-be9a-4e9aecba4122",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "2ace542e-7438-4975-95fa-0e8a4096c226",
    "metadata": {},
    "outputs": [],
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "a3ff315f-3d45-40f1-9166-d7dbe195b11b",
    "metadata": {},
    "outputs": [],
@@ -61,26 +61,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "d1afd755-1c4a-48a1-a18c-a4774972a1f0",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/dbdimitrov/anaconda3/lib/python3.8/site-packages/paramiko/transport.py:219: CryptographyDeprecationWarning: Blowfish has been deprecated\n",
-      "  \"class\": algorithms.Blowfish,\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import squidpy as sq"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "b4c57633-eb60-4cf9-8ce9-c5f4f6920842",
    "metadata": {},
    "outputs": [],
@@ -92,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "df54a925-6d32-4960-98f6-a02735c957c6",
    "metadata": {},
    "outputs": [],
@@ -120,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "99f519c5-b804-49e3-935c-8f377420cb0b",
    "metadata": {},
    "outputs": [],
@@ -141,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "bd5c93b9-17f2-47ea-8092-85d280d88920",
    "metadata": {},
    "outputs": [],
@@ -2806,7 +2797,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.8 (default, Apr 13 2021, 19:58:26) \n[GCC 7.3.0]"
   }
  },
  "nbformat": 4,
