--- a/correlations_clean.ipynb
+++ b/correlations_clean.ipynb
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 107,
    "id": "0441e374",
    "metadata": {},
    "outputs": [],
@@ -270,11 +270,59 @@
     "    \n",
     "    denominator_x = wsum * np.sum(w * (x**2)) - np.sum(wx)**2\n",
     "    denominator_y = wsum * np.sum(w * (y**2)) - np.sum(wy)**2\n",
-    "    denominator = np.sqrt(denominator_x * denominator_y) + 1.0e-20  # avoid division by zero, do if wegihts are all zero return 0? np.finfo(np.float64).eps\n",
+    "    denominator = np.sqrt(denominator_x * denominator_y + 1.0e-20) # avoid division by zero\n",
     "    \n",
-    "    wcor = numerator / denominator\n",
+    "    return numerator / denominator"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6fac12be",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@nb.njit(nb.f4(nb.f4[:], nb.f4[:], nb.f4[:]), cache=True)\n",
+    "def xy_product(x, y, w):\n",
+    "    return x * y * w"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7316a59d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def xy_mean(x, y, w):\n",
+    "    return np.sum(x * w) * np.sum(y * w) / np.sum(w)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "id": "afdcff2f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@nb.njit(nb.f4[:,:](nb.f4[:,:], nb.f4[:,:], nb.f4[:,:], nb.f4, nb.f4), cache=True, parallel=True)\n",
+    "def calculate_wcor(x_mat, y_mat, weight, wsum, msk_thr):\n",
+    "    spot_n = x_mat.shape[0]\n",
+    "    xy_n = x_mat.shape[1]\n",
     "    \n",
-    "    return wcor"
+    "    local_correlations = np.zeros((spot_n, xy_n), dtype=nb.f4) # nb.f4\n",
+    "    \n",
+    "    for i in nb.prange(spot_n):\n",
+    "        w = weight[i, :]\n",
+    "        msk = w > msk_thr\n",
+    "        \n",
+    "        for j in range(xy_n):\n",
+    "            x = x_mat[:, j][msk].argsort().argsort()\n",
+    "            y = y_mat[:, j][msk].argsort().argsort()\n",
+    "            \n",
+    "            local_correlations[i, j] = wcor(x_mat[:, j][msk], y_mat[:, j][msk], w[msk], wsum)\n",
+    "    \n",
+    "    return local_correlations"
    ]
   },
   {
@@ -287,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 97,
    "id": "bbc70571",
    "metadata": {},
    "outputs": [],
@@ -299,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 98,
    "id": "6b0f1714",
    "metadata": {},
    "outputs": [],
@@ -428,10 +476,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 99,
    "id": "0cfe7ec1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'x' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-99-0e3825dfef5d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# all weights = 1 (i.e. pearsonr)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mwcor\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mw\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mweight\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mwsum\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mwsum\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'x' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# all weights = 1 (i.e. pearsonr)\n",
     "wcor(x=x, y=y, w=weight[i,:], wsum=wsum)"
@@ -447,37 +507,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "afdcff2f",
+   "execution_count": 104,
+   "id": "5d040540",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 2min 53s, sys: 117 ms, total: 2min 53s\n",
+      "Wall time: 16.2 s\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.117755  , -0.19442837, -0.14684229, ..., -0.112324  ,\n",
+       "         0.07182601,  0.        ],\n",
+       "       [ 0.        ,  0.080853  , -0.05427799, ..., -0.23333478,\n",
+       "        -0.13238111,  0.23010302],\n",
+       "       [ 0.02571407, -0.31918997, -0.3443697 , ..., -0.46065855,\n",
+       "         0.03413666,  0.04124185],\n",
+       "       ...,\n",
+       "       [ 0.3057408 ,  0.21924528, -0.2982757 , ...,  0.15543087,\n",
+       "        -0.20192774,  0.13837363],\n",
+       "       [ 0.06430519, -0.54283893,  0.0998208 , ..., -0.02045712,\n",
+       "         0.6465301 ,  0.        ],\n",
+       "       [ 0.        , -0.29874232,  0.46295604, ...,  0.14961113,\n",
+       "        -0.05767659,  0.        ]], dtype=float32)"
+      ]
+     },
+     "execution_count": 104,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "@nb.njit(nb.f4[:,:](nb.f4[:,:], nb.f4[:,:], nb.f4[:,:], nb.f4), cache=True, parallel=True)\n",
-    "def calculate_wcor(x_mat, y_mat, weight, wsum):\n",
-    "    spot_n = x_mat.shape[0]\n",
-    "    xy_n = x_mat.shape[1]\n",
-    "    \n",
-    "    local_correlations = np.zeros((spot_n, xy_n), dtype=nb.f4) # nb.f4\n",
-    "    \n",
-    "    for i in nb.prange(spot_n):\n",
-    "        w = weight[i, :]\n",
-    "        # if w sum is zero, return 0\n",
-    "        for j in range(xy_n):\n",
-    "            local_correlations[i, j] = wcor(x_mat[:, j], y_mat[:, j], w, wsum)\n",
-    "    \n",
-    "    return local_correlations"
+    "%%time\n",
+    "calculate_wcor(x_mat, y_mat, weight, wsum)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5d040540",
+   "id": "e9a4d682",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "%%time\n",
-    "calculate_wcor(x_mat, y_mat, weight, wsum)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -562,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 105,
    "id": "a86f4263",
    "metadata": {},
    "outputs": [],
@@ -702,10 +778,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 82,
    "id": "e079146f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 11min 47s, sys: 11min 25s, total: 23min 13s\n",
+      "Wall time: 2min 11s\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.11775495, -0.19442852, -0.14684229, ..., -0.11232398,\n",
+       "         0.071826  ,  0.        ],\n",
+       "       [ 0.        ,  0.08085306, -0.05427799, ..., -0.23333478,\n",
+       "        -0.13238111,  0.23010302],\n",
+       "       [ 0.02571402, -0.3191901 , -0.34436983, ..., -0.4606586 ,\n",
+       "         0.03413658,  0.04124187],\n",
+       "       ...,\n",
+       "       [ 0.3057408 ,  0.2192452 , -0.29827568, ...,  0.15543082,\n",
+       "        -0.20192787,  0.13837363],\n",
+       "       [ 0.06430522, -0.54283893,  0.09982083, ..., -0.02045719,\n",
+       "         0.6465301 ,  0.        ],\n",
+       "       [ 0.        , -0.29874256,  0.4629561 , ...,  0.1496112 ,\n",
+       "        -0.05767663,  0.        ]], dtype=float32)"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%%time\n",
     "calc_local_correlations(x_mat=x_mat, y_mat=y_mat, weight=weight, wsum=wsum)"
@@ -1018,7 +1125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 83,
    "id": "153e7944-adbb-401e-914b-09c227dcfdea",
    "metadata": {},
    "outputs": [],
@@ -1032,7 +1139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 84,
    "id": "cbb22f08-505c-4087-af67-84577d421f60",
    "metadata": {},
    "outputs": [],
@@ -1042,7 +1149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 85,
    "id": "4f0fe90c-bf2b-44b3-8798-8aaad0e402f1",
    "metadata": {},
    "outputs": [],
@@ -1053,7 +1160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 86,
    "id": "5e601378",
    "metadata": {},
    "outputs": [],
@@ -1064,7 +1171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 87,
    "id": "d8c4f241",
    "metadata": {},
    "outputs": [],
@@ -1082,7 +1189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 88,
    "id": "0e95b8ba",
    "metadata": {},
    "outputs": [],
@@ -1102,7 +1209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 89,
    "id": "3573cd36",
    "metadata": {},
    "outputs": [],
@@ -1129,7 +1236,7 @@
     "    denominator_x = (weight_sums * (x_mat ** 2).dot(weight)) - (x_mat.dot(weight))**2\n",
     "    denominator_y = (weight_sums * (y_mat ** 2).dot(weight)) - (y_mat.dot(weight))**2\n",
     "    denominator = np.sqrt(denominator_x * denominator_y)\n",
-    "    denominator[denominator == 0] = np.finfo(float).eps # add noise to avoid division by zero\n",
+    "    denominator[denominator == 0] = np.finfo(np.float32).eps # add noise to avoid division by zero\n",
     "    \n",
     "    local_corrs = (numerator / denominator)\n",
     "    \n",
@@ -1138,7 +1245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 90,
    "id": "58b651b6",
    "metadata": {},
    "outputs": [],
@@ -1148,7 +1255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 91,
    "id": "297b3e2d",
    "metadata": {},
    "outputs": [],
@@ -1158,23 +1265,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "245c0cc9",
+   "execution_count": 94,
+   "id": "b37b960a",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "local_sp = calculate_local_correlations(x_mat = ligand_mat.A, y_mat=receptor_mat.A, dist=dist, method=\"spearman\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f5183853",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "id": "245c0cc9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1409, 2688)"
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "local_pc.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 93,
    "id": "a0e229bd",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.11775495,  0.        ,  0.07320522, ...,  0.31679758,\n",
+       "         0.08614511,  0.        ],\n",
+       "       [-0.19442862, -0.00572051, -0.10251832, ...,  0.31816354,\n",
+       "        -0.19816568, -0.01154072],\n",
+       "       [-0.14684229, -0.06664198, -0.2709753 , ..., -0.23486906,\n",
+       "         0.11611345,  0.49061623],\n",
+       "       ...,\n",
+       "       [-0.11232401, -0.2953236 , -0.34604046, ...,  0.20728923,\n",
+       "         0.06490986,  0.20051171],\n",
+       "       [ 0.071826  , -0.1637877 ,  0.19777067, ..., -0.11512091,\n",
+       "         0.6614117 ,  0.0007559 ],\n",
+       "       [ 0.        ,  0.21222384,  0.0748205 , ...,  0.16439405,\n",
+       "         0.        ,  0.        ]], dtype=float32)"
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "local_pc"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "49c6a9ce",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
