improve by sample verbosity

--- a/docs/source/notebooks/basic_usage.ipynb
+++ b/docs/source/notebooks/basic_usage.ipynb
@@ -1,11 +1,12 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "2e773f17-4832-47df-8ae0-0d7588ccc889",
    "metadata": {},
    "source": [
-    "# Usage"
+    "# Basic Usage"
    ]
   },
   {
@@ -48,15 +49,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import liana as li\n",
-    "\n",
     "# Only needed for visualization:\n",
-    "import matplotlib.pyplot as plt\n",
     "from scanpy.pl import umap\n",
-    "\n",
     "# toy data\n",
     "from scanpy.datasets import pbmc68k_reduced\n",
-    "%matplotlib inline"
+    "# import liana\n",
+    "import liana as li"
    ]
   },
   {
