--- a/correlations_clean.ipynb
+++ b/correlations_clean.ipynb
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 202,
    "id": "3b30f85e",
    "metadata": {},
    "outputs": [],
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 203,
    "id": "e6020530",
    "metadata": {},
    "outputs": [],
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 163,
    "id": "442d2fdf",
    "metadata": {},
    "outputs": [],
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 204,
    "id": "9b2eae96-cedb-44e6-b9b1-e122bba505bb",
    "metadata": {},
    "outputs": [
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 205,
    "id": "22989614",
    "metadata": {},
    "outputs": [],
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 206,
    "id": "76acd258",
    "metadata": {},
    "outputs": [],
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 207,
    "id": "ee5c3bc9",
    "metadata": {},
    "outputs": [
@@ -306,7 +306,7 @@
        "3      1.924077      0.892308        6.466562        1.000000  0.892308  "
       ]
      },
-     "execution_count": 90,
+     "execution_count": 207,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -333,15 +333,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 208,
    "id": "0441e374",
    "metadata": {},
    "outputs": [],
    "source": [
     "@nb.njit(nb.f4(nb.f4[:], nb.f4[:], nb.f4[:], nb.f4, nb.boolean), cache=True)\n",
-    "def wcor(x, y, w, wsum, spearman):\n",
+    "def wcor(x, y, w, wsum, rank):\n",
     "    \n",
-    "    if spearman:\n",
+    "    if rank:\n",
     "        x = np.argsort(x).argsort().astype(nb.f4)\n",
     "        y = np.argsort(y).argsort().astype(nb.f4)\n",
     "    \n",
@@ -359,8 +359,211 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 209,
+   "id": "4a1eae8d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@nb.njit(nb.f4(nb.f4[:], nb.f4[:], nb.f4[:], nb.f4, nb.int8), cache=True)\n",
+    "def _wcoex(x, y, w, wsum, method):\n",
+    "        if method == 0: # pearson\n",
+    "            c = wcor(x, y, w, wsum, False)\n",
+    "        if method == 1: # spearman\n",
+    "            c = wcor(x, y, w, wsum, True)\n",
+    "        return c"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 210,
    "id": "afdcff2f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 0 = pearson, 1 = spearman\n",
+    "@nb.njit(nb.f4[:,:](nb.f4[:,:], nb.f4[:,:], nb.f4[:,:], nb.f4, nb.int8, nb.f4), cache=True, parallel=True)\n",
+    "def weighted_coexpression(x_mat, y_mat, weight, wsum, method, msk_thr):\n",
+    "    spot_n = x_mat.shape[0]\n",
+    "    xy_n = x_mat.shape[1]\n",
+    "    \n",
+    "    local_correlations = np.zeros((spot_n, xy_n), dtype=nb.f4) # nb.f4\n",
+    "    \n",
+    "    for i in nb.prange(spot_n):\n",
+    "        w = weight[i, :]\n",
+    "        msk = w > msk_thr\n",
+    "        \n",
+    "        for j in range(xy_n):\n",
+    "            x = x_mat[:, j][msk]\n",
+    "            y = y_mat[:, j][msk]\n",
+    "            \n",
+    "            local_correlations[i, j] = _wcoex(x, y, w[msk], wsum, method)\n",
+    "    \n",
+    "    return local_correlations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 211,
+   "id": "bbc70571",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dist = adata.obsm['proximity']\n",
+    "weight = dist.A.astype(np.float32)\n",
+    "wsum = np.sum(weight[0,:])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 212,
+   "id": "58a369b7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 248 ms, sys: 4 µs, total: 248 ms\n",
+      "Wall time: 24.1 ms\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "local_pc = weighted_coexpression(x_mat, y_mat, weight, wsum, method=0, msk_thr=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 213,
+   "id": "fbf64fd8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-1.3271085e-03,  3.9822362e-02,  2.4550273e-01,  7.1733451e-01],\n",
+       "       [ 1.7837617e-01,  3.2363278e-01,  4.4977826e-01,  6.3835293e-01],\n",
+       "       [-7.0064294e-04,  2.5916928e-01,  3.0881086e-01,  7.2371179e-01],\n",
+       "       ...,\n",
+       "       [ 1.1166877e-01,  2.4904940e-02, -6.1331499e-01,  5.1184511e-01],\n",
+       "       [-5.4959452e-01,  4.4820198e-01,  6.4821437e-02,  2.5075829e-01],\n",
+       "       [-1.9903824e-01,  3.0093941e-01,  2.7269343e-01,  7.2044134e-01]],\n",
+       "      dtype=float32)"
+      ]
+     },
+     "execution_count": 213,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "local_pc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 214,
+   "id": "6b0f1714",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 133 ms, sys: 0 ns, total: 133 ms\n",
+      "Wall time: 17.3 ms\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "local_sp = weighted_coexpression(x_mat, y_mat, weight, wsum, method=1, msk_thr=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 215,
+   "id": "d928a639",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.14309415, -0.10581391,  0.22754101,  0.8548867 ],\n",
+       "       [ 0.05121762,  0.29360715,  0.44227427,  0.77065367],\n",
+       "       [ 0.25516036,  0.04407905,  0.23457415,  0.85224676],\n",
+       "       ...,\n",
+       "       [-0.06165615,  0.14110777, -0.5214374 ,  0.4505265 ],\n",
+       "       [-0.43638706,  0.66784775,  0.03018612,  0.38507667],\n",
+       "       [ 0.00177394,  0.12166166,  0.27545825,  0.8435311 ]],\n",
+       "      dtype=float32)"
+      ]
+     },
+     "execution_count": 215,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "local_sp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dc6f4457",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a3d955be",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "136195ce",
+   "metadata": {},
+   "source": [
+    "pass as fun"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 168,
+   "id": "bd286409",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# @nb.njit(nb.f4(nb.f4[:], nb.f4[:], nb.f4[:], nb.f4, nb.boolean), cache=True)\n",
+    "def wcor(x, y, w, wsum, spearman):\n",
+    "    \n",
+    "    if spearman:\n",
+    "        x = np.argsort(x).argsort().astype(np.float32)\n",
+    "        y = np.argsort(y).argsort().astype(np.float32)\n",
+    "    \n",
+    "    wx = w * x\n",
+    "    wy = w * y\n",
+    "    \n",
+    "    numerator = wsum * np.sum(wx * y) - np.sum(wx) * np.sum(wy)\n",
+    "    \n",
+    "    denominator_x = wsum * np.sum(w * (x**2)) - np.sum(wx)**2\n",
+    "    denominator_y = wsum * np.sum(w * (y**2)) - np.sum(wy)**2\n",
+    "    denominator = np.sqrt(denominator_x * denominator_y + 1.0e-20) # avoid division by zero\n",
+    "    \n",
+    "    return numerator / denominator"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 169,
+   "id": "aba87bae",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -386,68 +589,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
-   "id": "bbc70571",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dist = adata.obsm['proximity']\n",
-    "weight = dist.A.astype(np.float32)\n",
-    "wsum = np.sum(weight[0,:])"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
-   "id": "de73d720",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 156,
-   "id": "58a369b7",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: user 298 ms, sys: 0 ns, total: 298 ms\n",
-      "Wall time: 31.1 ms\n"
-     ]
-    }
-   ],
-   "source": [
-    "%%time\n",
-    "local_pc = calculate_wcor(x_mat, y_mat, weight, wsum, spearman=False, msk_thr=0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 157,
-   "id": "6b0f1714",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: user 288 ms, sys: 84 µs, total: 289 ms\n",
-      "Wall time: 38.9 ms\n"
-     ]
-    }
-   ],
-   "source": [
-    "%%time\n",
-    "local_sp = calculate_wcor(x_mat, y_mat, weight, wsum, spearman=True, msk_thr=0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4dd887f9",
+   "id": "caef93bc",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -455,7 +598,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dc6f4457",
+   "id": "b3cd80d3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1d40575e",
    "metadata": {},
    "outputs": [],
    "source": []
